fixed spacing in main page, added css to button

--- a/spa/style/main.css
+++ b/spa/style/main.css
@@ -64,11 +64,30 @@ li:hover {
 	background-color: white;
     border-radius: 2em;
 }
+  
+  
 
 #searchButton{
+    font-family: 'Rubik', sans-serif;
+    background: #CCD1D9;
     margin: auto;
     display: block;
     font-size: large;
+    box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.5);
+    line-height: 1.25;
+    background: #FC6E51;
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    letter-spacing: .08em;
+    text-transform: uppercase;
+    transition: background-color .6s ease;
+    overflow: hidden;
+}
+
+#searchButton:hover{
+    background-color:#002ead;
+      transition: 0.1s;
 }
 
 #searchbar{
@@ -76,6 +95,8 @@ li:hover {
     display: block;
     width: 50%;
     font-size: large;
+    padding:8px;
+    
 }
 
 form[name="settings1"]{
@@ -153,6 +174,12 @@ form[name="settings1"]{
 }
 
 #informationDiv{
-    display: flex;
-    justify-content: center;
+    margin: auto;
+    width: fit-content; 
+    height: fit-content;
+    border: 3px solid #333333;
+}
+
+#whiteSpace{
+    padding-bottom: 20px;
 }
